Replace templates and index mapping with RelationMetadata
Relates to https://github.com/crate/crate/issues/11939